--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #f0f0f0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-top: 70px;
     height: 100vh;
 }
 
@@ -21,8 +21,10 @@ body {
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 400px;
-    width: 100%;
+    max-width: 340px;
+    max-height: 380px;
+    width: 80%;
+    height: 80%;
     text-align: center;
 }
 
