--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #f0f0f0;
     display: flex;
     justify-content: center;
-    margin-top: 70px;
+    margin-top: 60px;
     height: 100vh;
 }
 
@@ -22,7 +22,7 @@ body {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     padding: 20px;
     max-width: 340px;
-    max-height: 380px;
+    max-height: 400px;
     width: 80%;
     height: 80%;
     text-align: center;
@@ -72,17 +72,30 @@ body {
 }
 
 /* Login Button */
+#BtBox{
+    display: flex;
+    
+}
+
 button {
     background-color: blue;
     color: white;
+    margin-top: 15px;
     padding: 10px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    width: 100%;
+    width: 100%
+    
 }
-
+a{
+     
+    margin-left: 5%;
+}
+#Register{
+    margin-left: 25%;
+}
 button:hover {
     background-color: darkblue;
 }
